Add secure eMASS settings and fix scan deployment
